# synth-opt

./: .gitignore  README.md  environment.yml  pyproject.toml
saved_state/: optimizer_state.pkl  saved_params.json
scripts/: monitor.py  optimize.py
src/synthopt/: cli.py  device.py  save.py
